--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "name": "music-play-backend-developmente",
   "version": "0.0.1",
-  "description": "",
+  "description": "Music Play backend for development environment",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
     "build:services": "docker-compose up --no-start && cd ..",
-		"start:services": "docker-compose start && docker exec music-play-rabbitmq-3.11 sh -c 'rabbitmq-plugins enable rabbitmq_management' && cd ..",
-		"start:service:mongodb": "docker start music-play-mongo-3.6.18 && cd ..",
-		"start:service:redis": "docker start music-play-redis-5.0.5 && cd ..",
-		"start:service:rabbitmq": "docker start music-play-rabbitmq-3.11 && docker exec music-play-rabbitmq-3.11 sh -c 'rabbitmq-plugins enable rabbitmq_management' && cd ..",
-		"stop:services": "docker-compose stop && cd ..",
-		"stop:service:mongodb": "docker stop music-play-mongo-3.6.18 && cd ..",
-		"stop:service:redis": "docker stop music-play-redis-5.0.5 && cd ..",
-		"stop:service:rabbitmq": "docker stop music-play-rabbitmq-3.11 && cd ..",
+    "start:services": "docker-compose start && docker exec music-play-rabbitmq-3.11 sh -c 'rabbitmq-plugins enable rabbitmq_management' && cd ..",
+    "start:service:mongodb": "docker start music-play-mongo-3.6.18 && cd ..",
+    "start:service:redis": "docker start music-play-redis-5.0.5 && cd ..",
+    "start:service:rabbitmq": "docker start music-play-rabbitmq-3.11 && docker exec music-play-rabbitmq-3.11 sh -c 'rabbitmq-plugins enable rabbitmq_management' && cd ..",
+    "stop:services": "docker-compose stop && cd ..",
+    "stop:service:mongodb": "docker stop music-play-mongo-3.6.18 && cd ..",
+    "stop:service:redis": "docker stop music-play-redis-5.0.5 && cd ..",
+    "stop:service:rabbitmq": "docker stop music-play-rabbitmq-3.11 && cd ..",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -34,6 +34,8 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.0",
+    "@nestjs/typeorm": "^11.0.0",
+    "dotenv": "^17.2.3",
     "install": "^0.13.0",
     "mongodb": "^6.0.0",
     "npm": "^11.7.0",
