--- a/package.json
+++ b/package.json
@@ -29,19 +29,23 @@
     "test:e2e": "jest --config ./apps/music-play-backend-developmente/test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.0",
     "@nestjs/typeorm": "^11.0.0",
     "dotenv": "^17.2.3",
+    "helmet": "^8.1.0",
     "install": "^0.13.0",
     "mongodb": "^6.0.0",
     "npm": "^11.7.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "source-map-support": "^0.5.21",
+    "ts-loader": "^9.5.4",
     "typeorm": "^0.3.28"
   },
   "devDependencies": {
@@ -61,7 +65,6 @@
     "prettier": "^3.0.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
