--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "test:e2e": "jest --config ./apps/music-play-backend-developmente/test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.971.0",
+    "@aws-sdk/lib-storage": "^3.971.0",
     "@nestjs/axios": "^4.0.1",
     "@nestjs/cache-manager": "^3.1.0",
     "@nestjs/common": "^10.0.0",
@@ -50,6 +52,7 @@
     "helmet": "^8.1.0",
     "install": "^0.13.0",
     "mongodb": "^6.0.0",
+    "multer": "^2.0.2",
     "npm": "^11.7.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -67,6 +70,7 @@
     "@types/cache-manager": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.19.28",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
