--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "@nestjs/jwt": "^11.0.2",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.4.22",
     "@nestjs/swagger": "^7.3.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/websockets": "^10.4.22",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "bcrypt": "^6.0.0",
@@ -51,6 +53,7 @@
     "dotenv": "^17.2.3",
     "helmet": "^8.1.0",
     "install": "^0.13.0",
+    "ioredis": "^5.9.2",
     "mongodb": "^6.0.0",
     "multer": "^2.0.2",
     "npm": "^11.7.0",
@@ -61,7 +64,8 @@
     "rxjs": "^7.8.1",
     "source-map-support": "^0.5.21",
     "ts-loader": "^9.5.4",
-    "typeorm": "^0.3.28"
+    "typeorm": "^0.3.28",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
